--- a/oes-core/src/main/resources/templates/admin/admin/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/admin/save-modal.html
@@ -22,8 +22,15 @@
           </div>
           <div class="form-group form_datetime">
             <label for="pass">密码</label>
-            <input type="password" name="pass" class="form-control"
+            <input type="password" name="password" class="form-control"
                    id="pass">
+          </div>
+          <div class="form-group form_datetime">
+            <label>所属学院 / 系统管理员</label>
+            <select name="academyId" id="academyId" style="width: 100%" class="academySelect">
+              <option>请选择</option>
+              <!-- 数据填充 -->
+            </select>
           </div>
         </div>
       </form>
