--- a/oes-core/src/main/resources/templates/admin/course/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/course/save-modal.html
@@ -15,15 +15,15 @@
                    name="courseName"
                    id="courseName">
 
-            <label for="name"></label>
+            <label for="names"></label>
             <input type="text" placeholder="教师姓名" class="form-control"
-                   name="name"
-                   id="name">
+                   name="names"
+                   id="names">
 
-            <label for="workNumber"></label>
+            <label for="workNumbers"></label>
             <input type="text" placeholder="教师工号" class="form-control"
-                   name="workNumber"
-                   id="workNumber">
+                   name="workNumbers"
+                   id="workNumbers">
           </div>
         </form>
       </div>
