--- a/oes-core/src/main/resources/templates/admin/course/update-modal.html
+++ b/oes-core/src/main/resources/templates/admin/course/update-modal.html
@@ -21,14 +21,14 @@
                    id="courseName" readonly="readonly">
           </div>
           <div class="table">
-            <label for="name">教师名称</label>
-            <input type="text" name="name" class="form-control name"
-                   id="name">
+            <label for="names">教师名称</label>
+            <input type="text" name="names" class="form-control names"
+                   id="names">
           </div>
           <div class="table">
-            <label for="workNumber">教师工号</label>
-            <input type="text" name="workNumber" class="form-control workNumber"
-                   id="workNumber">
+            <label for="workNumbers">教师工号</label>
+            <input type="text" name="workNumbers" class="form-control workNumbers"
+                   id="workNumbers">
           </div>
         </form>
       </div>
