--- a/oes-core/src/main/resources/templates/admin/student/list.html
+++ b/oes-core/src/main/resources/templates/admin/student/list.html
@@ -59,10 +59,12 @@
               <div class="card-header">
                 <div class="card-tools">
                   <div class="row">
+                    <% if(isEmpty(session.admin.academyId)){ %>
                     <div class="col-sm-6">
                       <select class="form-control academySelect"
                               name="findAcademy" id="findAcademy"></select>
                     </div>
+                    <% } %>
                     <div class="col-sm-6">
                       <input id="findKey" class="form-control "
                              style="width: 200px" placeholder="姓名或学号">
