--- a/oes-core/src/main/resources/templates/admin/announce/api.html
+++ b/oes-core/src/main/resources/templates/admin/announce/api.html
@@ -1,10 +1,13 @@
 <script>
   function operateFormatter(value, row, index) {
-    return ['  <button class="view btn btn-sm btn-success" onclick="goView(' + row.id
-    + ')">查看公告</button>\n' + '  <button class="edit btn btn-sm btn-warning" onclick="goUpdate('
-    + row.id + ')">编辑公告</button>\n'
-    + '  <button class="btn btn-sm btn-danger" onclick="deleteAnnounce(' + row.id
-    + ')">删除公告</button>',].join('');
+    const academyId = "${session.admin.academyId}";
+    const delBtn = academyId.length === 0
+        ? '<button class="btn btn-sm btn-danger" onclick="deleteAnnounce(' + row.id
+        + ')">删除公告</button>' : '';
+
+    return ['<button class="view btn btn-sm btn-success" onclick="goView(' + row.id
+    + ')">查看公告</button>&nbsp;' + '<button class="edit btn btn-sm btn-warning" onclick="goUpdate('
+    + row.id + ')">编辑公告</button>&nbsp;' + delBtn].join('');
   }
 
   OesUtil.initNormalTable('#announceInfo', "/api/announce/list", "get",
