--- a/oes-core/src/main/resources/templates/auth/login.html
+++ b/oes-core/src/main/resources/templates/auth/login.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="input-group mb-3">
                   <input type="password" id="teacherPassword" name="password" class="form-control"
-                         placeholder="密码" value="123">
+                         placeholder="密码" value="123456">
                   <div class="input-group-append">
                     <div class="input-group-text">
                       <span class="fa fa-lock"></span>
@@ -129,7 +129,7 @@
               <form id="admin-form">
                 <div class="input-group mb-3">
                   <input type="text" id="adminId" name="username" class="form-control"
-                         placeholder="管理员账号" value="admin">
+                         placeholder="管理员账号" value="system">
                   <div class="input-group-append">
                     <div class="input-group-text">
                       <span class="fa fa-user-circle"></span>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="input-group mb-3">
                   <input type="password" id="adminPassword" class="form-control"
-                         placeholder="密码" value="123">
+                         placeholder="密码" value="123456">
                   <div class="input-group-append">
                     <div class="input-group-text">
                       <span class="fa fa-lock"></span>
