pref: 增加 Excel 模板表格导入学生数据

--- a/oes-core/src/main/resources/templates/admin/major/api.html
+++ b/oes-core/src/main/resources/templates/admin/major/api.html
@@ -29,7 +29,7 @@
           return index + 1;
         }
       }, {
-        title: '课程统一代码',
+        title: '专业统一代码',
         field: 'id',
         sortable: false
       }, {
