--- a/oes-core/src/main/resources/templates/admin/course/list.html
+++ b/oes-core/src/main/resources/templates/admin/course/list.html
@@ -54,6 +54,19 @@
                   </div>
                 </div>
               </div>
+
+              <!-- 条件查询框 -->
+              <div class="card-header">
+                <div class="card-tools">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <input id="findKey" class="form-control "
+                             style="width: 200px" placeholder="课程名称">
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <!-- /.card-header -->
               <div class="card-body">
                 <table id="courseInfo"
