--- a/oes-core/src/main/resources/templates/admin/course/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/course/save-modal.html
@@ -24,6 +24,12 @@
             <input type="text" placeholder="教师工号" class="form-control"
                    name="workNumbers"
                    id="workNumbers">
+
+            <label for="academyId"></label>
+            <select name="academyId" id="academyId" style="width: 100%" class="academySelect">
+              <option>请选择</option>
+              <!-- 数据填充 -->
+            </select>
           </div>
         </form>
       </div>
