--- a/oes-core/src/main/resources/templates/admin/course/update-modal.html
+++ b/oes-core/src/main/resources/templates/admin/course/update-modal.html
@@ -11,24 +11,24 @@
       <div class="modal-body">
         <form id="update-form">
           <div class="table">
-            <label for="id">ID</label>
-            <input type="text" name="id" class="form-control id"
-                   id="id" readonly="readonly">
+            <label>ID</label>
+            <input type="text" name="id" class="form-control id" readonly="readonly">
           </div>
           <div class="table">
-            <label for="courseName">课程名称</label>
-            <input type="text" name="courseName" class="form-control courseName"
-                   id="courseName" readonly="readonly">
+            <label>课程名称</label>
+            <input type="text" name="courseName" class="form-control courseName" readonly="readonly">
           </div>
           <div class="table">
-            <label for="names">教师名称</label>
-            <input type="text" name="names" class="form-control names"
-                   id="names">
+            <label>课程所属学院</label>
+            <input type="text" name="academyName" class="form-control academyName" readonly="readonly">
           </div>
           <div class="table">
-            <label for="workNumbers">教师工号</label>
-            <input type="text" name="workNumbers" class="form-control workNumbers"
-                   id="workNumbers">
+            <label>教师名称</label>
+            <input type="text" name="names" class="form-control names">
+          </div>
+          <div class="table">
+            <label>教师工号</label>
+            <input type="text" name="workNumbers" class="form-control workNumbers">
           </div>
         </form>
       </div>
