--- a/oes-core/src/main/resources/templates/admin/teacher/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/teacher/save-modal.html
@@ -32,8 +32,9 @@
           <div class="form-group">
             <label>职位</label>
             <select name="job" class="form-control job-select" style="width: 100%">
-              <option value="教授">教授</option>
+              <option value="老师">老师</option>
               <option value="副教授">副教授</option>
+              <option value="教授">教授</option>
               <option value="讲师">讲师</option>
               <option value="高级讲师">高级讲师</option>
             </select>
