--- a/oes-core/src/main/resources/templates/admin/main/api.html
+++ b/oes-core/src/main/resources/templates/admin/main/api.html
@@ -12,8 +12,14 @@
   $("#admin").click(function () {
     OesUtil.ajaxPage("#admin", "/admin");
   });
+  $("#paper").click(function () {
+    OesUtil.ajaxPage("#paper", "/admin/paper");
+  });
   $("#teacher").click(function () {
     OesUtil.ajaxPage("#teacher", "/admin/teacher");
+  });
+  $("#grade").click(function () {
+    OesUtil.ajaxPage("#grade", "/admin/grade");
   });
   $("#student").click(function () {
     OesUtil.ajaxPage("#student", "/admin/student");
