--- a/oes-core/src/main/resources/templates/student/exam/api/paper-api.html
+++ b/oes-core/src/main/resources/templates/student/exam/api/paper-api.html
@@ -23,7 +23,7 @@
 
   // 初始化表单
   OesUtil.initNormalTable('#paperInfo',
-      "/api/paper/list?paperType=正式&majorId=${session.student.majorId}", "get", [{
+      "/api/paper/list?paperType=正式&majorId=${session.student.majorId}&level=${session.student.level}", "get", [{
         title: '考试',
         field: 'paperName',
         sortable: false
