--- a/oes-core/src/main/resources/templates/admin/student/update-modal.html
+++ b/oes-core/src/main/resources/templates/admin/student/update-modal.html
@@ -42,15 +42,8 @@
           </div>
           <div class="form-group form_datetime">
             <label for="level">年级</label>
-            <select id="level" name="level" class="form-control level" style="width: 100%">
-              <option value="">请选择</option>
-              <option value="16">16级</option>
-              <option value="17">17级</option>
-              <option value="18">18级</option>
-              <option value="19">19级</option>
-              <option value="20">20级</option>
-              <option value="21">21级</option>
-            </select>
+            <input id="level" name="level" class="form-control level" style="width: 100%"
+                   readonly="readonly"/>
           </div>
           <div class="form-group form_datetime">
             <label for="sex">性别</label>
